RM#76974 Remove progressSelect from ProjectTask