@@ -110,9 +110,9 @@ public class ProjectTaskProjectRepository extends ProjectTaskRepository {
     logger.debug("Validate project task:{}", json);
 
     logger.debug(
-        "Planned progress:{}, ProgressSelect: {}, DurationHours: {}, TaskDuration: {}",
+        "Planned progress:{}, Progress: {}, DurationHours: {}, TaskDuration: {}",
         json.get("plannedProgress"),
-        json.get("progressSelect"),
+        json.get("progress"),
         json.get("durationHours"),
         json.get("taskDuration"));
 
@@ -123,14 +123,13 @@ public class ProjectTaskProjectRepository extends ProjectTaskRepository {
         BigDecimal plannedProgress = new BigDecimal(json.get("plannedProgress").toString());
         if (plannedProgress != null
             && savedTask.getPlannedProgress().intValue() != plannedProgress.intValue()) {
-          logger.debug(
-              "Updating progressSelect: {}", ((int) (plannedProgress.intValue() * 0.10)) * 10);
-          json.put("progressSelect", ((int) (plannedProgress.intValue() * 0.10)) * 10);
+          logger.debug("Updating progress: {}", plannedProgress.intValue());
+          json.put("progress", plannedProgress.intValue());
         }
-      } else if (json.get("progressSelect") != null) {
-        Integer progressSelect = new Integer(json.get("progressSelect").toString());
-        logger.debug("Updating plannedProgress: {}", progressSelect);
-        json.put("plannedProgress", new BigDecimal(progressSelect));
+      } else if (json.get("progress") != null) {
+        Integer progress = Integer.valueOf(json.get("progress").toString());
+        logger.debug("Updating plannedProgress: {}", progress);
+        json.put("plannedProgress", new BigDecimal(progress));
       }
       if (json.get("durationHours") != null) {
         BigDecimal durationHours = new BigDecimal(json.get("durationHours").toString());
@@ -149,9 +148,9 @@ public class ProjectTaskProjectRepository extends ProjectTaskRepository {
 
     } else {
 
-      if (json.get("progressSelect") != null) {
-        Integer progressSelect = new Integer(json.get("progressSelect").toString());
-        json.put("plannedProgress", new BigDecimal(progressSelect));
+      if (json.get("progress") != null) {
+        json.put(
+            "plannedProgress", new BigDecimal(Integer.parseInt(json.get("progress").toString())));
       }
       if (json.get("taskDuration") != null) {
         Integer taskDuration = new Integer(json.get("taskDuration").toString());
@@ -168,7 +167,6 @@ public class ProjectTaskProjectRepository extends ProjectTaskRepository {
     task.setAssignedTo(null);
     task.setTaskDate(null);
     task.setPriority(null);
-    task.setProgressSelect(0);
     task.setProgress(null);
     task.setTaskEndDate(null);
     task.setMetaFile(null);
